[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-data-factory"
version = "0.3.0"
description = "Lightweight test data generation with realistic fake values."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["test-data", "factory", "fake", "mock", "fixture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-data-factory#readme"
Repository = "https://github.com/philiprehberger/py-data-factory"
Issues = "https://github.com/philiprehberger/py-data-factory/issues"
Changelog = "https://github.com/philiprehberger/py-data-factory/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_data_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
